Added some missing i8n strings and updated pt_br

--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -594,6 +594,7 @@
   "name": "Name",
   "new_group_name": "New Group Name",
   "new_group_title": "New Group Title",
+  "new_message": "New message",
   "new_price": "New Price",
   "new_q_create_account": "New? Create Your Account!",
   "new_quantity": "New Quantity",
@@ -785,11 +786,13 @@
   "reward_recipient": "Reward Recipient",
   "same_out": "Same Amount",
   "scoop_num": "Scoop Number",
+  "search": "Search",
   "search_aliases": "Search Aliases...",
   "search_assets": "Search Assets...",
   "search_by_id": "Search By ID...",
   "search_by_seller": "Search By Seller...",
   "search_marketplace": "Search Marketplace",
+  "search_or_start_message": "Search or start new message",
   "secure": "Secure",
   "seed_password_generator": "Move your cursor around to seed the random number generator and create a secure passphrase.",
   "seeded": "Seeded",
