--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -1,7 +1,7 @@
 {
   "Bid Order": "Ordem de compra",
   "Purchased Products": "Produtos adquiridos",
-  "account": "Account",
+  "account": "Conta",
   "account_balance": "Saldo da conta",
   "account_created": "Sua conta foi criada",
   "account_details": "Detalhes da conta",
@@ -10,7 +10,7 @@
   "account_is_not_public_yet": "Nota: Sua conta não será visível no blockchain, a menos que você execute pelo menos uma transação ou tenha recebido moedas ou mensagens.",
   "account_no_assets": "Não foram encontrados ativos para esta conta.",
   "account_qr_code": "Código QR da conta",
-  "accounts": "Accounts",
+  "accounts": "Contas",
   "actions": "Ações",
   "add_answer": "Adicionar Resposta",
   "add_as_contact": "Adicionar como Contato",
@@ -26,31 +26,31 @@
   "advanced": "Avançado",
   "advanced_transaction_operations": "Operações Avançadas de Transação",
   "advanced_uppercase": "Avançado",
-  "alias": "Pseudônimo",
-  "alias_account_help": "O pseudônimo fará referência ao número de conta digitado e pode ser usado para enviar burst, mensagens, etc..",
-  "alias_account_link": "O pseudônimo aponta para a conta __account_id__",
-  "alias_account_no_link": "O pseudônimo não aponta para uma conta. ",
-  "alias_assignment": "Atribuição de Pseudônimo",
-  "alias_buy": "Compra de Pseudônimo",
-  "alias_data_help": "O pseudônimo pode conter quaisquer dados que você quiser.",
-  "alias_last_adjusted": "O pseudônimo foi ajustado pela última vez em __timestamp__.",
-  "alias_name": "Nome do Pseudônimo",
-  "alias_sale": "Venda de Pseudônimo",
-  "alias_sale_cancellation": "Cancelamento da Venda de Pseudônimo",
-  "alias_sale_direct_offer": "Este pseudônimo foi oferecido a você por __burst__ burst.",
-  "alias_sale_indirect_offer": "Este pseudônimo é oferecido para venda por __burst__ burst.",
-  "alias_sale_info_outdated": "A informação de venda do pseudônimo está desatualizada.",
-  "alias_transfer": "Transferência de Pseudônimo",
-  "alias_uri": "URI do pseudônimo",
-  "aliases": "Aliases",
-  "aliases_owned": "Pseudônimos que Possui",
-  "aliases_to_account_id": "Pseudônimos para o ID da Conta",
-  "aliases_to_uri": "Pseudônimos para URI",
+  "alias": "Apelido",
+  "alias_account_help": "O apelido fará referência ao número de conta digitado e pode ser usado para enviar burst, mensagens, etc..",
+  "alias_account_link": "O apelido aponta para a conta __account_id__",
+  "alias_account_no_link": "O apelido não aponta para uma conta. ",
+  "alias_assignment": "Atribuição de apelido",
+  "alias_buy": "Compra de apelido",
+  "alias_data_help": "O apelido pode conter quaisquer dados que você quiser.",
+  "alias_last_adjusted": "O apelido foi ajustado pela última vez em __timestamp__.",
+  "alias_name": "Apelido",
+  "alias_sale": "Venda de apelido",
+  "alias_sale_cancellation": "Cancelamento da venda de apelido",
+  "alias_sale_direct_offer": "Este apelido foi oferecido a você por __burst__ burst.",
+  "alias_sale_indirect_offer": "Este apelido é oferecido para venda por __burst__ burst.",
+  "alias_sale_info_outdated": "A informação de venda do apelido está desatualizada.",
+  "alias_transfer": "Transferência de apelido",
+  "alias_uri": "URI do apelido",
+  "aliases": "Apelidos",
+  "aliases_owned": "Seus apelidos",
+  "aliases_to_account_id": "Apelidos para o ID da Conta",
+  "aliases_to_uri": "Apelidos para URI",
   "all_blocks": "Todos os Blocos",
   "all_transactions": "Todas as transações",
-  "amount": "Quantidade",
-  "amount_nqt": "Montante",
-  "amount_plus_fee": "Quantidade + Taxa",
+  "amount": "Total",
+  "amount_nqt": "Total Planck",
+  "amount_plus_fee": "Total + Taxa",
   "and_logout": "e encerrar a sessão",
   "animate_forging_indicator": "Animar Indicador de Forjamento",
   "announced_address": "Endereço anunciado",
@@ -83,12 +83,12 @@
   "automatically_generated_passphrase_is": "A sua senha gerada automaticamente é: ",
   "available_balance": "Saldo Disponível",
   "available_for_transfer": "__qty__ disponível para transferência",
-  "available_supply": "Fornecimento disponível",
+  "available_supply": "Total minerado",
   "avg_amount_per_block": "Qtde. Média Por Bloco",
   "avg_fee_per_block": "Taxa Média Por Bloco",
   "back": "De volta",
   "balance": "Saldo",
-  "balance_history": "histórico de crédito",
+  "balance_history": "Histórico de saldo",
   "base_target": "Alvo Base",
   "bid_order_cancellation": "Cancelamento da Ordem de Compra",
   "bid_order_id": "ID da ordem de compra",
@@ -97,7 +97,7 @@
   "block": "Bloco",
   "block_details": "Detalhes de Bloco",
   "block_generation_time": "Tempo de Geração do Bloco",
-  "block_height": "Altura do bloco",
+  "block_height": "Número do bloco",
   "block_id": "ID do bloco",
   "block_reward": "Bloquear Recompensa",
   "block_signature": "Assinatura do bloco",
@@ -138,7 +138,7 @@
   "change_price": "Mudar o preço",
   "change_qty": "Mudar Qtde",
   "change_quantity": "Alterar Quantidade",
-  "cheap_fee": "Barato",
+  "cheap_fee": "Baixa",
   "checking_for_updates": "Verificando por atualizações...",
   "choose_own_passphrase": "Quer escolher sua própria senha? Clique aqui.",
   "clear_results": "Limpar Resultados",
@@ -189,7 +189,7 @@
   "dashboard": "Painel Administrativo",
   "data": "Dados",
   "data_is_encrypted": "Dados são criptografados.",
-  "date": "Date",
+  "date": "Data",
   "deadline": "Prazo limite",
   "deadline_hours": "Prazo limite (horas)",
   "decimals": "Decimais",
@@ -224,10 +224,10 @@
   "domain": "Domínio",
   "download": "Baixar",
   "download_started": "Download iniciado",
-  "downloaded": "Baixado",
+  "downloaded": "Recebido",
   "downloaded_hash": "Hash Baixado",
-  "downloaded_volume": "Volume Baixado",
-  "downloading_blockchain": "Baixando a Corrente de Blocos",
+  "downloaded_volume": "Volume recebido",
+  "downloading_blockchain": "Baixando a Blockchain",
   "downloading_update": "A atualização está sendo baixada. Você será informado assim que terminar.",
   "drop_update": "Arraste a atualização do cliente (o arquivo zip) aqui ou clique para selecionar.",
   "ec_block_height": "Altura do Bloco EC",
@@ -467,14 +467,14 @@
   "form_warnings": "Avisos do formulário",
   "form_warnings_help": "Mostrar um aviso quando a quantia / taxa escolhida for maior que a quantia especificada abaixo.",
   "free_memory": "Memória livre",
-  "from": "De",
+  "from": "Desde",
   "full_hash": "Hash completo",
   "full_transaction_hash": "Hash completo da transação",
   "general": "Geral",
   "general_release": "Lançamento geral",
   "generate": "Gerar",
   "generate_passphrase": "Gerar Frase Secreta",
-  "generate_qr": "Generate QR",
+  "generate_qr": "Gerar código QR",
   "generate_token": "Gerar o token",
   "generated_token_is": "O token gerado é: ",
   "generation_signature": "Assinatura de geração",
@@ -496,13 +496,13 @@
   "group_asset_help": "Escolha um grupo para este ativo.",
   "guaranteed_balance": "Saldo garantido",
   "header": "Cabeçalho",
-  "height": "Altura",
+  "height": "Número",
   "highest_bid": "Lance mais alto",
   "hint_offline_account": "Você está assistindo esta conta",
   "hint_online_account": "Você pode executar transações com esta conta",
   "host": "Servidor",
   "hub_announcement": "Anúncio de Hub",
-  "immutable": "Immutable",
+  "immutable": "Não poderá ser alterado",
   "import_contact": "Importar contatos",
   "includes_feedback": "Comentários incluidos",
   "incorrect_purchase": "Compra incorreta.",
@@ -530,15 +530,15 @@
   "logout": "Sair",
   "logout_stop_forging": "Sair e parar o forjamento",
   "lowest_ask": "Pedido mais baixo",
-  "market_capitalization": "Capitalização de mercado",
+  "market_capitalization": "Valor de mercado",
   "market_delivery": "Entrega do mercado",
   "market_feedback": "Feedback do mercado",
-  "market_info": "Informação de Mercado",
+  "market_info": "Informações de mercado",
   "market_listing": "Listagem de mercadorias",
   "market_price_change": "Variação de preço do mercado",
   "market_purchase": "Compra de mercado",
   "market_quantity_change": "Mudança de quantidade de mercado",
-  "market_rank": "Rank do mercado",
+  "market_rank": "Posição no ranking",
   "market_refund": "Reembolso de mercado",
   "market_removal": "Remoção do mercado",
   "marketplace": "Mercado",
@@ -570,7 +570,7 @@
   "message_is_not_encrypted": "Esta mensagem não é criptografada.",
   "messages": "Mensagens",
   "min_nr_of_options": "Número mínimo de opções",
-  "minimum_fee": "Mínimo",
+  "minimum_fee": "Mínima",
   "minimum_nr_choices": "Número mínimo de escolhas",
   "more_info": "Mais informações",
   "multi_out_payment": "Pagamento Multi Out",
@@ -585,6 +585,7 @@
   "name": "Nome",
   "new_group_name": "Novo nome do grupo",
   "new_group_title": "Novo título de grupo",
+  "new_message": "Nova mensagem",
   "new_price": "Preço novo",
   "new_q_create_account": "Novo? Crie a sua conta!",
   "new_quantity": "Nova quantidade",
@@ -691,7 +692,7 @@
   "payment_with_message": "Pagamento com mensagem",
   "payments": "Pagamentos",
   "peer": "Par",
-  "peers": "Pares",
+  "peers": "Rede",
   "pending": "Pendente",
   "percent_complete": "__percent__ % completo",
   "percent_seeded": "__percent__ % semeado",
@@ -705,8 +706,8 @@
   "previous_block": "Bloco anterior",
   "previous_block_hash": "Hash de bloco anterior",
   "previous_page": "Página Anterior",
-  "price": "Price",
-  "price_chart_7d": "Tabela de preços 7 dias",
+  "price": "Preço",
+  "price_chart_7d": "Gráfico de 7 dias",
   "priority_fee": "Prioridade",
   "private_feedback": "Feedback privado",
   "processors": "Processadores",
@@ -725,10 +726,10 @@
   "purchase_refunded": "Esta compra foi reembolsada.",
   "purchased_products": "Produtos adquiridos",
   "put_for_sale": "Colocar para venda",
-  "qr_code": "QR Code",
-  "qr_code_data": "Dados de Código QR",
+  "qr_code": "Código QR",
+  "qr_code_data": "Dados do código",
   "qty": "Qtd",
-  "quantity": "Quantity",
+  "quantity": "Quantidade",
   "raw_transaction_details": "Detalhes da transação não processada",
   "recent_blocks": "Blocos recentes",
   "recent_transactions": "Transações recentes",
@@ -761,7 +762,7 @@
   "refund_this_purchase_q": "Reembolsar esta compra?",
   "refunded": "Reembolsado",
   "register": "Registrar",
-  "register_alias": "Registrar Pseudônimo",
+  "register_alias": "Registrar apelido",
   "register_q": "Registrar?",
   "remember_decryption_passphrase": "Lembrar a senha para desencriptação",
   "remember_passphrase_by_default": "Lembrar senha por padrão",
@@ -770,17 +771,19 @@
   "remove_from_bookmarks": "Remover dos favoritos",
   "remove_from_group": "Remover do grupo",
   "repeat": "Repetir",
-  "request_burst": "Request BURST",
+  "request_burst": "Receber BURST",
   "request_processing_time": "Solicitar Tempo de Processamento",
   "returning_user_q": "Já é usuário?",
   "reward_recipient": "Destinatário da recompensa",
   "same_out": "Same Amount",
   "scoop_num": "Número de colher",
+  "search": "Buscar",
   "search_aliases": "Pesquisar Pseudônimos...",
   "search_assets": "Pesquisar ativos...",
   "search_by_id": "Pesquisar por ID...",
   "search_by_seller": "Pesquisar por vendedor...",
   "search_marketplace": "Pesquisar no mercado",
+  "search_or_start_message": "Buscar ou iniciar nova mensagem",
   "secure": "proteger",
   "seed_password_generator": "Mova seu cursor para semear o gerador de números aleatórios e crie uma frase secreta segura.",
   "seeded": "Semeado",
@@ -909,7 +912,7 @@
   "time": "Tempo",
   "timestamp": "Timestamp",
   "title": "Título",
-  "to": "Para",
+  "to": "Até",
   "toggle_navigation": "Mudar modo de navegação",
   "token": "Token",
   "total": "Total",
@@ -954,8 +957,8 @@
   "update_multiple_available": "Tanto a versão geral como a experimental estão disponíveis. Não é recomendável que você instale a versão experimental, a menos que você saiba o que está fazendo.",
   "update_testnet": "BRS não pode ser atualizado enquanto conectado ao testnet.",
   "update_up_to_date": "Você já tem a versão mais recente. Não há necessidade de atualização.",
-  "uploaded": "Carregado",
-  "uploaded_volume": "Volume carregado",
+  "uploaded": "Enviado",
+  "uploaded_volume": "Volume enviado",
   "uri": "URI",
   "uri_is": "O URI é '__uri__'",
   "use_24_hour_format": "Use o formato de 24 horas",
@@ -973,7 +976,7 @@
   "version": "Versão",
   "view_more": "Ver mais",
   "view_owner_info_q": "Exibir informações do proprietário?",
-  "volume_24h": "Volume 24h",
+  "volume_24h": "Volume em 24h",
   "vote": "Votar",
   "vote_casting": "Votação",
   "vote_x": "votar __x__",
@@ -987,7 +990,7 @@
   "wrong_pin": "PIN errado",
   "x_confirmations": "__x__ confirmações",
   "yes": "Sim",
-  "yesterdays_change": "Mudança de ontem",
+  "yesterdays_change": "Variação em 24h",
   "you": "Você",
   "you_received_assets": "Você recebeu 1 ativo __name__.",
   "you_received_assets_plural": "Você recebeu __count__ ativos __name__.",
