--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -18,7 +18,7 @@
   "add_contact": "Adicionar Contacto",
   "add_message_q": "Adicionar uma Mensagem?",
   "add_note_to_self_q": "Adicionar uma anotação pessoal?",
-  "add_recipient": "Add Recipient",
+  "add_recipient": "Adicionar beneficiário",
   "add_recipient_to_contacts_q": "Adicionar o destinatário para contatos?",
   "add_sender_as_contact": "Adicionar o Remetente como Contato",
   "add_to_group": "Adicionar ao Grupo",
@@ -599,6 +599,7 @@
   "next": "Próximo",
   "next_block": "Bloco seguinte",
   "next_page": "Página seguinte",
+  "network": "Rede",
   "no": "Não",
   "no_account_q_create_account": "Não tem conta? Clique aqui para criar uma!",
   "no_aliases_yet": "Ainda não há pseudónimos",
@@ -692,7 +693,7 @@
   "payment_with_message": "Pagamento com mensagem",
   "payments": "Pagamentos",
   "peer": "Par",
-  "peers": "Rede",
+  "peers": "Pares",
   "pending": "Pendente",
   "percent_complete": "__percent__ % completo",
   "percent_seeded": "__percent__ % semeado",
